fixes the spacing between logo and the food menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,11 @@ width: cover;
 }
 .moringa{
 
-  margin-top: -9px;
+ /* margin-top: -9px;*/
 }
 .happyhour{
   height: 105px;
-  width: 350px;
+/*  width: 350px;*/
   background-color: #e0e0d1;
   justify-content: center;
   display: flex;
@@ -21,7 +21,7 @@ width: cover;
 }
 .partytime{
   height: 105px;
-  width: 350px;
+  /*width: 350px;*/
   background-color: #ff3300;
   justify-content: center;
   display: flex;
@@ -30,13 +30,21 @@ width: cover;
 
 .Breakfast{
   height: 210px;
-  width: 350px;
+  /*width: 350px;*/
   justify-content: center;
   display: flex;
   color: #FFFFFF;
   align-items: center;
 }
-.Breakfast:hover{
+/*.Breakfast:hover{
+bottom: 0;
+right:0;
+background:rgba(250,250,250,0.5);
+opacity:0.5;
+overflow: hidden;
+transition: .5s ease;
+}*/
+#breakfast:hover{
 bottom: 0;
 right:0;
 background:rgba(250,250,250,0.5);
@@ -44,42 +52,63 @@ opacity:0.5;
 overflow: hidden;
 transition: .5s ease;
 }
+#lunch:hover{
+bottom: 0;
+right:0;
+background:rgba(250,250,250,0.5);
+opacity:0.5;
+overflow: hidden;
+transition: .5s ease;
+}
+#dinner:hover{
+bottom: 0;
+right:0;
+background:rgba(250,250,250,0.5);
+opacity:0.5;
+overflow: hidden;
+transition: .5s ease;
+}
+
+
+
+
+
 .Breakfast p:hover{
   color: #000000;
 }
 .Lunch{
   height: 210px;
-  width: 350px;
+  /*width: 350px;*/
   justify-content: center;
   display: flex;
   color: #FFFFFF;
   align-items: center;
 }
-.Lunch:hover{
+/*.Lunch:hover{
 bottom: 0;
 right:0;
 background:rgba(250,250,250,0.5);
 opacity:0.5;
 overflow: hidden;
 transition: .5s ease;
-}
+}*/
 .Dinner{
   height: 210px;
-  width: 350px;
+  /*width: 350px;*/
   justify-content: center;
   display: flex;
   color: #FFFFFF;
   align-items: center;
 
 }
-.Dinner:hover{
+/*.Dinner:hover{
 bottom: 0;
 right:0;
 background:rgba(250,250,250,0.5);
 opacity:0.5;
 overflow: hidden;
 transition: .5s ease;
-}
+}*/
 #image{
    margin: 100px;
    border-radius: 4px;
@@ -192,7 +221,8 @@ body {
  margin-top:13%;
  margin-bottom: 13%;
  background-color: #ffffff;
-
+ width: 70%;
+     min-height: 250px;
 }
 #table1{
  width:100%;
@@ -215,16 +245,14 @@ body {
  color: orange;
 }
 #customers{
- display: flex;
- margin: 100px;
+
  border-radius: 4px;
  padding: 5px;
- border: 1px solid #ddd;
- align-content: center;
- align-items: center;
- width: 70%;
+ border: 5px solid #ddd;
+ width: 80%;
  background-color: #ffffff;
- margin-left: 13%;
+ text-align: center;
+ margin: 30px auto
 }
 #subscription{
  background-image: url(../ip2/assets/backgrounds/subscribe.jpg);
@@ -251,7 +279,7 @@ body {
  background-color:  #e65c00;
  display: flex;
  justify-content: center;
- align-items: center;
+ text-align: center;
 }
 #logo-white{
  float: left;
@@ -273,4 +301,40 @@ body {
  color:#ffffff;
  font-size: 15px;
  padding-left: 45px;
+}
+div#betty{
+  width: 80%;
+background-color: #fff;
+padding: 10px;
+height: 350px;
+}
+
+ul#myTabs{
+  width: 100%;
+}
+ul#myTabs>li{
+      width: 25%;
+}
+span#span1{
+  font-size: 25px;
+    color: #e04608;
+}
+
+span#span2{
+  font-size: 25px;
+    color: #ef5c01;
+    left: 290px;
+    top: -190px;
+}
+p#shish{
+  text-align: center;
+    font-size: 20px;
+    color: #ef5b05;
+    margin: 15px;
+}
+ul#listtags{
+  list-style: none;
+}
+ul#listtags>li{
+  display: inline;
 }
